# life-agents

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/commands/: daily.md  weekly-summary.md
context/: DECISIONS.md  GOALS.md  GUIDE.md  LIFE.md  OPEN_LOOPS.md  README.md  STATE.md
context/goals/: 2026.md  life.md
context/history/: decisions.md
context/options/: investment-strategy.md
context/state/: life-areas.yaml  open-loops.md
dashboard/: Dockerfile  README.md  app.py  components.py  inventory.py  marketing.py  requirements.txt  sales.py  server.py  server_auto.py  theme.css
dashboard/finance/: portfolio.py
journals/: CLAUDE.md  DAILY_TEMPLATE.md
journals/daily/: 2025-01-01.md  2026-01-16.md  2026-01-18.md  2026-01-21.md  2026-01-22.md  2026-01-23.md  2026-01-24.md  2026-01-25.md  2026-01-26.md  2026-01-27.md  2026-01-28.md  2026-01-29.md  2026-01-30.md  2026-01-31.md  2026-02-01.md  2026-02-02.md  2026-02-03.md
journals/weekly/: claude-2026-01-24.md  claude-2026-01-31.md
research/: TEMPLATE.md
research/2026-01-19/2026-predictions-with-dan-ives-and-chris-verrone/: summary.md
research/2026-01-19/2026-predictions-with-dan-ives-and-chris-verrone/analysis/: DATA_SOURCE_FIX.md  PREDICTIONS_REFERENCE.md  QUICKSTART.md  README.md  READY_TO_USE.md  UV_SETUP_COMPLETE.md  claude-summary.md  gemini.md  prediction_dashboard.py  run_dashboard.sh
research/2026-01-19/2026-predictions-with-dan-ives-and-chris-verrone/inputs/: claude.md  gemini.md  grok.md  perplexity.md  prompt.md
research/ai-ecosystem/inputs/: stratechery-tsmc-intel-2025-10-28.md  stratechy-tsmc-2026-01-21.md
research/shopify/: .env.example  EDGAR_CHEATSHEET.md  KPI_EXTRACTION_README.md  download_press_releases.sh  edgar_concepts_guide.py  extract_financials.py  extract_kpis_clean.py  extract_shopify_q1_2021.py  find_all_filings.py  shopify-2021-q1-content.txt  shopify_dashboard.py  shopify_edgar_helper.py  shopify_filing_urls.json  shopify_gmv_mrr_data.csv  shopify_kpis.csv  shopify_kpis_extracted.csv  verify_extraction.py
research/shopify/old_not_working/: EXTRACTION_SUMMARY.md  README.md  edgar_discovery.py  extract_kpis_final.py  extract_kpis_from_sec.py  extract_shopify_kpis.py  inspect_pdf.py  shopify_2021_q1_financials.json  shopify_dashboard_old.py
research/shopify/press_release/: README.md
research/tsmc/: app.py
scripts/tools/: new_research.py
src/life_agents/: __init__.py
src/life_agents/core/: config.py  data_loader.py  utils.py
