[project]
name = "life-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.188.0",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[project.scripts]
life = "life_agents.cli:app"
new-research = "scripts.tools.new_research:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/life_agents", "scripts"]
